# divine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUTO_ROUTING.md  Agents.md  BUILD_REPORT.md  CHANGELOG.md  CLAUDE.md  CLI_INTEGRATIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROVIDER_COMPATIBILITY.md  README.md  SECURITY.md  alembic.ini  analyze_chats.py  bazaarlink_api.py  bluesmind.py  context.md  docker-compose.yml  exa_search.py  extract_env.py  fetch_models.py  free.py  groq_api.py  main.py  mistral_api.py  mkdocs.yml  models.json  models.txt  nvidia_nim.py  openrouter.py  proxy.py  proxy_config.json  pyproject.toml  render.yaml  requirements.txt  superpowers.md  (+2 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  (+2 more)
backend/: Client.py  StreamStt.py  main.py  requirements.txt  server.py  tts11.py
config/: dashboard_stats.json  models.json  proxy_config.json
context/: memory.json
dashboard/: app.py
docs/: architecture.md  changelog.md  cli.md  configuration.md  contributing.md  index.md  installation.md  limitations.md  provider-compatibility.md  providers.md  quick-start.md  security.md  self-hosting.md  troubleshooting.md  tui.md
engine/: agent_tools.py  orchestrator.py  state_manager.py
examples/: docker-config.toml
frontend/: app.py  check_js_syntax.js  index.html  main.js  package-lock.json  style.css
lightweight/: analyze_chats.py  fetch_models.py  main.py
migrations/: env.py
portscan/: main.go
provider/: agentrouter.py  bazaarlink_api.py  bluesmind.py  cerebras.py  cloudflare_ai.py  cohere_api.py  deepseek.py  exa_search.py  forge_ai.py  free.py  futureppo.py  google_ai.py  groq_api.py  jina_search.py  mistral_api.py  nvidia_nim.py  openrouter.py
proxy/: agentrouter_proxy.py  bluesmind_proxy.py  cerebras_proxy.py  deepseek_proxy.py  forge_ai_proxy.py  groq_proxy.py  master_proxy.py  mistral_proxy.py  nvidia_proxy.py  server.py  translator.py
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
smoke/: README.md  __init__.py  capabilities.py  conftest.py  features.py
test_apis/: sarvam.py
tests/: __init__.py  conftest.py  test_api.py  test_cli_tui.py  test_core_edges.py  test_foundation.py  test_live_providers.py  test_protocols.py  test_providers.py  test_routing_reliability.py  test_sdk_compatibility.py  test_wrappers.py
(+387 files in other folders)
